# Local-2-Global_SEG

./: .gitignore  METHOD.md  README.md  explain_file.md  final_results_summary.md  flow.md  huong_dan_su_dung_he_thong.md  huongdansudung.md  move_image.ipynb  temp_stage3.py  test_asmk.py
.github/workflows/: build-cann.yml  build_cann_windows.yml
fire/: LICENSE  NOTICE  README.MD  dataset.py  evaluate.py  evaluate_single_image.py  explainfile_dataset.py.md  explainfile_evaluate.py.md  explainfile_evaluate_single_image.py.md  explainfile_fire_network.py.md  explainfile_lit.py.md  explainfile_losses.py.md  explainfile_parse_results.py.md  explainfile_train.py.md  explainfile_train_fire.yml.md  fire_network.py  lit.py  losses.py  train.py  train_fire.yml
fire/config/: README.md  eval_fire.yml  explainfile__asmk_how_fire.yml.md  explainfile_eval_fire.yml.md  explainfile_eval_fire_asmk.yml.md
fire/lib/: README.md
fire/model/: README.md
google-research/: README.md  explainfile___init__.py.md  explainfile_compile_protos.sh.md
google-research/cann/: .bazelrc  WORKSPACE  WORKSPACE.bak  build_index_with_cann.sh  check_index.py  convert_csv2json.py  convert_npy_to_bin.py  convert_npy_to_decs.py  eigen.BUILD  explainfile_build_index_with_cann.sh.md  explainfile_convert_csv2json.py.md  explainfile_convert_npy_to_decs.py.md  explainfile_merger.py.md  explainfile_run.sh.md  explainfile_run_cann.sh.md  explainfile_run_cann_query.sh.md  get_candidate_neighbors.py  index_all.py  l2g_retrieval.py  merger.py  paris_defense_000002_neighbors.txt  pybind11.bzl  query_main_fire.py  roxford5k_database_names.txt  roxford5k_query_names.txt  roxford5k_results_chamfer.txt  rparis6k_database_names.txt  rparis6k_mapping.txt  rparis6k_query_names.txt  rparis6k_results_chamfer.txt  run_cann.sh  run_cann_query.sh  stage1_indexing.py
google-research/cann/cann/: BUILD.bazel  README.md
google-research/cann/main/: BUILD.bazel  BUILD.bazel.backup  cann_rg.cc  colored_c_nn_random_grids_index_main.cc  explainfile_run_main.sh.md  explainfile_run_main_baidu.sh.md  file.h  npy_reader.h
google-research/cann/main/file/: README.md  file.h
src/: README.md  evaluate.py  explainfile_run_pipeline.py.md  run_cann_search.py  run_pipeline.py  stage1_extract_local.py  stage2_extract_global.py  stage3_rerank.py
src/core/: README.md
src/offline/: README.md
src/online/: README.md
src/stage1/: local_extractor.py  split_data.py
src/stage2/: embedding_query_candidate.py  query_candidate.py  smacof.py
src/stage3/: __init__.py  eval_baseline.py  evaluate_map.py  graph_diffusion.py  run_stage3.py
src/utils/: README.md  explainfile_evaluate.py.md  (+1 more)
stage1/: local_extractor.py
(+385 files in other folders)
