package(default_visibility = ["//visibility:public"])

cc_library(
    name = "colored_c_nn",
    srcs = glob(["*.cc"]),
    hdrs = glob(["*.h"]),
    deps = [
        "@eigen//:eigen",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)
