package(default_visibility = ["//visibility:public"])

cc_library(
    name = "cann_lib",
    srcs = glob(["*.cc"]),
    hdrs = glob(["*.h"]),
    deps = [
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:node_hash_map",
        "@com_google_absl//absl/container:node_hash_set",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/random",
        "@com_google_absl//absl/random:bit_gen_ref",
        "@com_google_absl//absl/random:distributions",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
        "@com_google_absl//absl/types:span",
        "@com_google_absl//absl/utility",
        "@eigen//:eigen",
    ],
    copts = [
        "-std=c++17",
        "-O3",
        "-march=native",
    ],
    # KHÔNG CÓ linkopts
)

cc_binary(
    name = "colored_c_nn_random_grids_index_main",
    srcs = ["colored_c_nn_random_grids_index_main.cc"],
    deps = [":cann_lib"],
    copts = [
        "-std=c++17",
        "-O3",
        "-march=native",
    ],
    # KHÔNG CÓ linkopts
)